Menu Alignment corrected

--- a/assets/css/style-main.css
+++ b/assets/css/style-main.css
@@ -437,7 +437,7 @@ body a {
 .menu-inner {
   justify-content: center;
   height: 100vh;
-  padding-top: 30vh;
+  padding-top: 40vh;
 }
 
 .discover_video {
